# MCPHunt

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  manifest.json  pyproject.toml  requirements.txt
artifacts/release/: croissant.json  experiment_config.json  per_seed_results.json  schema_cards.json
configs/: api_keys.yaml.example  mcp_server_versions.json
scripts/: collect_agent_traces.py  download_traces.py  estimate_recall.py  evaluate_agent_traces.py  evaluate_mitigation.py  generate_croissant_metadata.py  generate_results_macros.py  prepare_huggingface_release.py  relabel_traces.py  reproduce_paper_tables.py  sanitize_traces.py  verify_release_consistency.py
src/mcphunt/: __init__.py  agent_loop.py  bootstrap.py  canary_registry.py  config.py  environments.py  integrity.py  labeling.py  log.py  mcp_driver.py  prompts.py  runtime_guard.py  taint_tracker.py  taxonomy.py  text_utils.py  trace_viewer.py  workspace.py
src/mcphunt/datasets/: __init__.py  agent_traces.py  loader.py
tests/: test_labeling_integrity.py  test_project_smoke.py
